src/index.css
body {
  margin: 1em;
  padding: 0;
  background-color: #fff;
}

.cssgrid {
  display: grid;
  grid-template-columns: 1fr 2fr;
  /* grid-gap: 12px; */
  grid-auto-columns: minmax(100px, auto);
}

.stop-placard {
  grid-column: 1 / 3;
  grid-row: 1 / 3;
}

.olli-logo-div {
  grid-column: 1 / 2;
  grid-row: 1 / 3;
}

.stop-name-div {
  grid-column: 2 / 3;
  grid-row: 1 / 3;
}

.arrival-list, .clock-weather, .asl-screen, .info-win, .pois-nearby {
  /* border-left: 12px solid #444444; */
}

.arrival-list, .clock-weather, .asl-screen, .info-win {
  grid-column: 1 / 2;
  padding: 24px 12px 0 12px;
}

.asl-screen {
  grid-row: 5 / 6;
}

.info-win {
  grid-row: 6 / 8;
  min-height: 384px;
}

.pois-nearby {
  grid-column: 1 / 3;
}

.mapboxgl-map, .stop-graph {
  grid-column: 2 / 3;
}
.mapboxgl-map {
  grid-row: 4 / 8;
}
.stop-graph {
  grid-row: 3 / 4;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 700;
}

h1 {
  font-size: 48pt;
}

.stop-placard, .olli-logo-div, .stop-name-div {
  color: white;
  background-color: #046b99;
  padding: 12px;
}

.arrival-list {
  border-top: 4px solid #444444;
}
.clock-weather {
  grid-row: 3 / 5;
  padding-bottom: 24px;
}

.weather img {
  height: 75px;
  width: 75px;
  position: relative;
  top: -12px;
}

.weather .forecast {
  vertical-align: top;
}

.forecast table {
  width: 100%;
}
tr.small {
  font-size: 75%;
}
.forecast td {
  vertical-align: top;
}

.olli-logo {
  height: 36px;
  padding-right: 72px;
}

.mapboxgl-map {
  min-height: 600px;
  border-left: 6px solid #046b99;
  border-right: 6px solid #046b99;
  border-bottom: 6px solid #046b99;
}

.instructions {
  font-weight: 300;
  font-size: 10pt;
  font-style: italic;
  float: left;
  color: white;
  padding: 12px;
  vertical-align: middle;
}

.mapboxgl-popup-content {
  background-color: coral;
  font-size: 18pt;
  border-radius: 18px;
}

.poi-images {
  white-space: nowrap;
  overflow-y: scroll;
}
.poi-images>img {
  width: 256px;
  margin: 0 4px;
}

.stop-graph {
  border-left: 6px solid #046b99;
  border-right: 6px solid #046b99;
  border-bottom: 6px solid #046b99;
  text-align: center;
  padding: 8px;
  font-weight: 400;
}

#stop-btn-table {
  width: 100%;
  z-index: 2;
  font-weight: 700;
}
td.stop-btn {
  width: 20%;
}

.stop-dot-spacer {
  position: absolute;
  z-index: -1;
  padding-top: 24px;
  white-space: nowrap;
  overflow-y: hidden;
}
.stop-dot-spacer>.stop-dot {
  padding: 0 10px 0 0;
  font-size: 150%;
  color: #56ccff;
}

.stop-btn-img {
  width: 72px;
  padding: 8px;
  border-radius: 50%;
  /* background-color: #fff; */
  outline: none;
}
input.stop-btn-img.selected {
  background-color: #00cfff;
}

.poi-pill, button.directionsbutton {
  color: #ffffff;
  background-color: #444444;
  font-size: 10pt;
  font-weight: 300;
  margin: 4px 8px 4px 0;
  padding: 8px;
  border-radius: 8px;
  border: none;
}
.poi-pill.selected {
  background-color: #046b99;
}

img.poi-image {
  height: 184px;
  border: 4px solid #444444;
  margin-right: 8px;
}
img.poi-image.selected {
  border: 6px solid #046b99;
}

button.directionsbutton {
  display: block;
  background-color: #e63022;
  font-size: 18pt;
  border-radius: 0px;
}

